--- a/ReliefCommandCenter/ReliefCommandCenter/RCCAddRefugeeViewController.xib
+++ b/ReliefCommandCenter/ReliefCommandCenter/RCCAddRefugeeViewController.xib
@@ -16,10 +16,13 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" style="plain" separatorStyle="default" allowsSelection="NO" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="M7C-RB-JTw">
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" allowsSelection="NO" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="M7C-RB-JTw">
                     <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="320" id="25t-x0-3zF"/>
+                    </constraints>
                     <connections>
                         <outlet property="dataSource" destination="-1" id="6pG-S5-Iwd"/>
                         <outlet property="delegate" destination="-1" id="ieG-R3-7p2"/>
@@ -27,6 +30,11 @@
                 </tableView>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+            <constraints>
+                <constraint firstItem="M7C-RB-JTw" firstAttribute="leading" secondItem="1" secondAttribute="leading" id="1U7-aU-WY8"/>
+                <constraint firstItem="M7C-RB-JTw" firstAttribute="top" secondItem="1" secondAttribute="top" id="QIi-vf-MqU"/>
+                <constraint firstAttribute="bottom" secondItem="M7C-RB-JTw" secondAttribute="bottom" id="mHi-UZ-yL5"/>
+            </constraints>
             <simulatedStatusBarMetrics key="simulatedStatusBarMetrics"/>
             <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
             <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
