--- a/Android/res/menu/rcc__main_.xml
+++ b/Android/res/menu/rcc__main_.xml
@@ -1,9 +1,10 @@
-<menu xmlns:android="http://schemas.android.com/apk/res/android" >
-
-    <item
-        android:id="@+id/action_settings"
-        android:orderInCategory="100"
-        android:showAsAction="never"
-        android:title="@string/action_settings"/>
-
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
+ 
+    <item 
+      android:title="Take Picture" 
+      android:id="@+id/camera" 
+      android:icon="@drawable/ic_menu_camera" 
+      android:showAsAction="ifRoom">
+ 	 </item>
+  
 </menu>
